# atari-cr

./: .gitignore  README.md  active_rl_env.yaml  debug.csv  pyproject.toml  run.sh  start_training.sh  translation_transformer.ipynb
agent/: dqn_atari_cr.py
common/: pauseable_env.py  pausible_env.py  pvm_buffer.py  render_focus.py
data/Atari-HEAD/: download.sh
scripts/: boxing.sh  boxing_10m.sh  boxing_2m.sh  breakout.sh  freeway.sh  tmp.sh
src/atari_cr/: atari_head.py  buffers.py  foveation.py  hyperparams.py  models.py  module_overrides.py  pauseable_env.py  pvm_buffer.py  render_focus.py  utils.py
src/atari_cr/agents/: dqn_atari_base.py  dqn_atari_cr.py  dqn_atari_single_policy.py  dqn_atari_sugarl.py  dqn_atari_wp_base_peripheral.py  dqn_atari_wp_random.py  dqn_atari_wp_single_policy.py  dqn_atari_wp_sugarl.py  sac_atari_cr.py
src/atari_cr/agents/dqn_atari_cr/: PVMWrapper.py  crdqn.py  main.py  networks.py
src/atari_cr/agents/ray_dqn/: main.py
src/atari_cr/agents/sugarl_sac/: __init__.py  policies.py  sugarl_sac.py
src/atari_cr/atari_head/: __init__.py  atari_head.py  atari_head_demo.py  dataset.py  durations.py  gaze_predictor.py  og_gaze_predictor.py  og_heatmap.py  translation_transformer.py  unet.py  utils.py  vit.py
src/atari_cr/atari_head/authors_code/: og_dataset.py  og_gaze_predictor.py
src/atari_cr/common/: buffer.py  buffers.py  grokking.py  hyperparams.py  models.py  module_overrides.py  pauseable_env.py  preprocessing.py  pvm_buffer.py  tqdm.py  utils.py
src/atari_cr/graphs/: auc_comparison.py  colors.py  common.py  eccentricity.py  episode_heatmap.py  fov_ablation.py  fov_showcase.py  game_histograms.py  gaze_dist.py  gaze_durations.py  gaze_timings.py  human_likeness.py  line_graphs.py  pause_cost.py  pause_freq_correlation.py  pauses.py  pvm_showcase.py  recreate_obs_video.py  rewards_5m.py  styling.py  sugarl.py  sugarl_rewards.py
tests/: test_buffers.py
tests/agents/dqn_atari_cr/: test_config.py  test_main.py  test_og_config.py
tests/atari_head/: test_dataset.py
tests/common/: test_preprocessing.py
