[project]
name = "atari-cr"
version = "0.1.0"
description = "Playing atari with human-plausible vision"
authors = [
    { name = "Niko Konzack", email = "niko-konzack@t-online.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">3.8,<3.12"
dependencies = [
    
]
classifiers = [
    "Private :: Do Not Upload"
]

[project.optional-dependencies]
torch = [
    "active-gym @ git+https://github.com/elicassion/active-gym.git#main",
    # curl -L https://www.atarimania.com/roms/Atari-2600-VCS-ROM-Collection.zip -o x.zip && unzip x.zip
    # python -m atari_py.import_roms ROMS && rm -r ROMS 'HC ROMS' x.zip
    "cython<3",
    "tb-nightly",
    "opencv-python>=4.10",
    "gymnasium>=0.29",
    # Additionally used pacakages
    "pandas",
    "typed-argument-parser",
    "scikit-learn",
    "ray[tune, default]",
    "stable-baselines3",
    "optuna",
    "torchmetrics",
    "h5py",
    "tqdm"
]
tf = [
    "tensorflow[and-cuda]",
    "opencv-python"
]

[project.urls] 
Repository = "https://github.com/Niko32/atari-cr"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"