[project]
name = "atari-cr"
version = "0.1.0"
description = "Playing atari with human-plausible vision"
authors = [
    { name = "Niko Konzack", email = "niko-konzack@t-online.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">3.8,<3.12"
dependencies = [
    
]
classifiers = [
    "Private :: Do Not Upload"
]

[project.optional-dependencies]
torch = [
    "active-gym @ git+https://github.com/elicassion/active-gym.git#main",
    # curl -L https://www.atarimania.com/roms/Atari-2600-VCS-ROM-Collection.zip -o x.zip && unzip x.zip
    # python -m atari_py.import_roms ROMS && rm -r ROMS 'HC ROMS' x.zip
    "cython<3",
    "tb-nightly",
    "opencv-python>=4.10",
    "ale-py>=0.9",
    "gymnasium[atari]==0.29",
    "autorom[accept-rom-license]",
    # Additionally used pacakages
    "typed-argument-parser",
    "scikit-learn",
    "ray[tune,default,rllib]",
    "stable-baselines3",
    "optuna",
    "torchmetrics",
    "h5py",
    "tqdm",
    "polars[numpy,plot]"
]
tf = [
    "tensorflow[and-cuda]",
    "opencv-python"
]
text = [
    "torch==2.3.0",
    "torchtext==0.18.0",
    "torchdata",
    "spacy",
    "numpy<2.0.0",
    "portalocker"
]

[project.urls] 
Repository = "https://github.com/Niko32/atari-cr"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "W", "C"]
ignore = ["E701"] # Single line if statements

[tool.ruff.format]
docstring-code-format = true