[project]
name = "atari-cr"
version = "0.1.0"
description = "Playing atari with human-plausible vision"
authors = [
    { name = "Niko Konzack", email = "niko-konzack@t-online.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">3.8,<3.12"
dependencies = [
    "active-gym @ git+https://github.com/elicassion/active-gym.git@9f98d962a6bfb8033703c7e3f766b3cea05e12a3",
    "cython<3",
    "tb-nightly==2.20.0a20250605",
    "opencv-python>=4.10",
    "ale-py>=0.9",
    "autorom[accept-rom-license]==0.6.1",
    # Additionally used pacakages
    "typed-argument-parser==1.10.1",
    "scikit-learn==1.6.1",
    "ray[tune,default,rllib]==2.38",
    "stable-baselines3==2.3.2",
    "optuna==4.3.0",
    "torchmetrics==1.7.2",
    "h5py==3.13.0",
    "tqdm==4.67.1",
    "polars[numpy,plot]==1.30.0",
    "scipy==1.15.3",
]
classifiers = [
    "Private :: Do Not Upload"
]

[project.optional-dependencies]
text = [
    "torch==2.3.0",
    "torchtext==0.18.0",
    "torchdata",
    "spacy",
    "numpy<2.0.0",
    "portalocker"
]

[project.urls] 
Repository = "https://github.com/openai/atari-py"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "W", "C"]
ignore = ["E701"] # Single line if statements

[tool.ruff.format]
docstring-code-format = true